test/spec_vectors/global/ok/module_21.wat
(module (global $g i32 (i32.const 0)) (global i32 (global.get $g)))